--- a/EasyInput/src/main/res/layout/phone_input_view.xml
+++ b/EasyInput/src/main/res/layout/phone_input_view.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/phone_TIL_enterYourPhone"
-    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="12dp"
-    android:hint="@string/enter_your_phone_number"
-    app:counterEnabled="true"
-    app:counterMaxLength="10"
-    app:endIconMode="clear_text"
-    app:errorEnabled="true"
-    app:errorIconDrawable="@drawable/error_icon"
-    app:helperText="Required*"
-    app:prefixText="+972"
-    app:startIconDrawable="@drawable/phone_icon"
+    android:orientation="horizontal"
     tools:context=".customviews.PhoneInputView">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/phone_ETXT_enterYourPhone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:inputType="phone"
-        android:padding="16dp"
-        android:textSize="18sp" />
+    <Spinner
+        android:id="@+id/phone_SPN_countrySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:paddingHorizontal="16dp" />
 
-</com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/phone_TIL_enterYourPhone"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:layout_weight="1"
+        android:hint="@string/enter_your_phone_number"
+        app:counterEnabled="true"
+        app:counterMaxLength="10"
+        app:endIconMode="clear_text"
+        app:errorEnabled="true"
+        app:errorIconDrawable="@drawable/error_icon"
+        app:helperText="Required*"
+        app:startIconDrawable="@drawable/phone_icon">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phone_ETXT_enterYourPhone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="phone"
+            android:padding="16dp"
+            android:textSize="18sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+</LinearLayout>
