--- a/EasyInput/src/main/res/layout/username_input_view.xml
+++ b/EasyInput/src/main/res/layout/username_input_view.xml
@@ -6,6 +6,7 @@
     style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="12dp"
     android:hint="@string/enter_your_username"
     app:endIconMode="clear_text"
     app:errorEnabled="true"
@@ -17,7 +18,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/username_ETXT_enterUsername"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:inputType="text"
         android:padding="16dp"
         android:textSize="18sp" />
